my-test/testsuite_scan/ir/SingleSource/Regression/C/gcc-c-torture/execute/20050131-1.ll.err
/home/youzhewei.linux/work/llvm-project/llvm-test-suite/SingleSource/Regression/C/gcc-c-torture/execute/20050131-1.c:13:1: error: type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int [-Wimplicit-int]
   13 | main()
      | ^
      | int
1 error generated.
